@@ -32,9 +32,10 @@ import com.nimbusds.oauth2.sdk.util.JSONObjectUtils;
  * <p>Related specifications:
  *
  * <ul>
- *     <li>OpenID Connect Federation 1.0, section 4.8.
+ *     <li>OpenID Connect Federation 1.0.
  * </ul>
  */
+@Deprecated
 public class TrustMarkIssuerMetadata {
 	
 	
